@@ -11,6 +11,7 @@ importFrom(sandwich, vcovHC, vcovHC.default) # used in assocRegression
 importFrom(lmtest, lrtest, lrtest.default) # used in assocRegression
 importFrom(logistf, logistf) # used in assocRegression
 importFrom(quantsmooth, paintCytobands, lengthChromosome) # used to plot ideograms
+importFrom(data.table, fread)
 
 exportClasses(
     SnpAnnotationDataFrame,
