@@ -73,6 +73,8 @@ checkIntensityFile <- function(path=".",
     ## generate names for the genotype data.frame
     df.names <- names(sort(col.nums))
 
+    if(scan.name.in.file==-1) {skip.num <- skip.num-1; head<-TRUE} else  {head<-FALSE}
+
     ## set up objects to keep track of things for each file
 
     ## refresh diagnostics from when the ncdf was created
@@ -131,8 +133,7 @@ checkIntensityFile <- function(path=".",
         if (!affy.inten) {
             
             ##read in the file for one sample and keep columns of interest; skip to next file if there is a read error (using function "try")
-            if(scan.name.in.file==-1) {skip.num <- skip.num-1; head<-TRUE} else  {head<-FALSE}
-            dat <- try(read.table(files[i], header=head, sep=sep.type, comment.char="", skip=skip.num, colClasses=cc))
+            dat <- try(fread(files[i], header=head, sep=sep.type, skip=skip.num, colClasses=cc, data.table=FALSE))
             if (inherits(dat, "try-error")) { read.file[i] <- 0; message(paste("error reading file",i)); next; k <- k+1 } 		
             read.file[i] <- 1 
             ## get sample name from column heading for Affy
@@ -197,6 +198,7 @@ checkIntensityFile <- function(path=".",
             ## For Affy, intensity files have two rows per snp
         } else {
             ## Get the intensity data
+            ## need read.table here because of commented header lines
             dat <- try(read.table(files[i], sep="\t", header=TRUE, colClasses=c("character","double")))
             if (inherits(dat, "try-error")) { read.file[i] <- 0; message(paste("error reading intensity file",i)); next }
             read.file[i] <- 1	
