@@ -257,6 +257,8 @@ createDataFile <- function(path=".",
     ## generate names for the genotype data.frame
     df.names <- names(sort(col.nums))
 
+    if(scan.name.in.file == -1) {skip.num <- skip.num-1; head<-TRUE} else {head<-FALSE}
+    
     ## set up objects to keep track of things for each file
     fn <- length(data.filenames)
     read.file <- rep(NA, fn)  # indicator of whether the file was readable or not
@@ -280,8 +282,7 @@ createDataFile <- function(path=".",
         save(diagnostics, file=diagnostics.filename)
 
         ## read in the file for one sample and keep columns of interest; skip to next file if there is a read error (using function "try")
-        if(scan.name.in.file == -1) {skip.num <- skip.num-1; head<-TRUE} else  {head<-FALSE}
-        dat <- try(read.table(data.filenames[i], header=head, sep=sep.type, comment.char="", skip=skip.num, colClasses=cc))
+        dat <- try(fread(data.filenames[i], header=head, sep=sep.type, skip=skip.num, colClasses=cc, data.table=FALSE))
         if (inherits(dat, "try-error")) { read.file[i] <- 0; message(paste("error reading file",i)); next }
         read.file[i] <- 1
         ## get sample name from column heading for Affy
